--- a/index.html
+++ b/index.html
@@ -309,8 +309,81 @@
     </section>
 
     <!-- Frequently asked questions -->
-    <section id="faq" class="mx-auto flex flex-col gap-14 w-[82.9%] md:w-135">
-
+    <section id="faq" class="max-w-full mx-auto my-25 flex flex-col gap-14 w-[82.9%] md:w-135">
+      <!-- faq header -->
+      <div class="flex flex-col mx-auto gap-4 md:w-135.25 md:h-28">
+        <h2 class="text-[30px] text-blue-950 text-center font-medium leading-[135%]">
+          Frequently Asked Questions
+        </h2>
+        <p class="text-[15px] text-blue-950 text-center leading-[165%]">
+          Here are some of our FAQs. If you have any other questions you’d like
+          answered please feel free to email us.
+        </p>
+      </div>
+      <!-- faq accordion -->
+      <ul class="w-full flex flex-col">
+        <!-- faq 1 -->
+        <li class="w-full border-b border-t border-t-[#495dcf]/20 border-b-[#495dcf]/20">
+          <button
+            class="peer w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400">
+            <p>What is Bookmark?</p>
+            <img class="w-4 h-2" src="./images/icon-arrow.svg" alt="">
+          </button>
+          <div
+            class="hidden peer-open:block text-[15px] md:text-[16px] pb-4 text-blue-950 font-light leading-[200%] md:leading-[225%]">
+            Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt
+            justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis.
+          </div>
+        </li>
+        <!-- faq 2 -->
+        <li class="w-full border-b border-b-[#495dcf]/20">
+          <button
+            class="peer w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400">
+            <p>How can I request a new browser?</p>
+            <img class="w-4 h-2" src="./images/icon-arrow.svg" alt="">
+          </button>
+          <div
+            class="hidden peer-open:block text-[15px] md:text-[16px] pb-4 text-blue-950 font-light leading-[200%] md:leading-[225%]">
+            Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula.
+            Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
+            ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies.
+            Mauris augue massa, ultricies non ligula. Suspendisse imperdiet.
+          </div>
+        </li>
+        <!-- faq 3 -->
+        <li class="peer w-full border-b border-b-[#495dcf]/20">
+          <button
+            class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400">
+            <p>Is there a mobile app?</p>
+            <img class="w-4 h-2" src="./images/icon-arrow.svg" alt="">
+          </button>
+          <div
+            class="hidden peer-open:block text-[15px] md:text-[16px] pb-4 text-blue-950 font-light leading-[200%] md:leading-[225%]">
+            Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum
+            urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed
+            sollicitudin ex et ultricies bibendum.
+          </div>
+        </li>
+        <!-- faq 4 -->
+        <li class="peer w-full border-b border-b-[#495dcf]/20">
+          <button
+            class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400">
+            <p>What about other Chromium browsers?</p>
+            <img class="w-4 h-2" src="./images/icon-arrow.svg" alt="">
+          </button>
+          <div
+            class="hidden peer-open:block text-[15px] md:text-[16px] pb-4 text-blue-950 font-light leading-[200%] md:leading-[225%]">
+            Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam
+            vitae neque eget nisl gravida pellentesque non ut velit.
+          </div>
+        </li>
+      </ul>
+      <!-- faq button -->
+      <div class="flex justify-center m:mb-4">
+        <button class="w-28.5 h-12 rounded-[5px] bg-blue-600 text-white text-[15px] leading-[200%] font-normal">
+          More Info
+        </button>
+      </div>
     </section>
   </div>
 
@@ -321,52 +394,21 @@
   Pricing
   Contact
   Login
+-->
 
-
-  
-
- 
-  
- 
-
- 
-
-
-  Frequently Asked Questions
-
-  Here are some of our FAQs. If you have any other questions you’d like
-  answered please feel free to email us. -->
-
-  <!-- Question 1 -->
-  <!-- What is Bookmark? -->
-
-  <!-- Answer 1 -->
-  <!-- Lorem ipsum dolor sit amet, consectetur adipiscing elit. Fusce tincidunt
-  justo eget ultricies fringilla. Phasellus blandit ipsum quis quam ornare mattis. -->
-
-  <!-- Question 2 -->
-  <!-- How can I request a new browser? -->
-
-  <!-- Answer 2 -->
-  <!-- Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa, ultricies non ligula.
-  Suspendisse imperdiet. Vivamus luctus eros aliquet convallis ultricies. Mauris augue massa,
-  ultricies non ligula. Suspendisse imperdie tVivamus luctus eros aliquet convallis ultricies.
-  Mauris augue massa, ultricies non ligula. Suspendisse imperdiet. -->
+  <!--  -->
 
   <!-- Question 3 -->
-  <!-- Is there a mobile app? -->
+  <!--  -->
 
   <!-- Answer 3 -->
-  <!-- Sed consectetur quam id neque fermentum accumsan. Praesent luctus vestibulum dolor, ut condimentum
-  urna vulputate eget. Cras in ligula quis est pharetra mattis sit amet pharetra purus. Sed
-  sollicitudin ex et ultricies bibendum. -->
+  <!--  -->
 
   <!-- Question 4 -->
-  <!-- What about other Chromium browsers? -->
+  <!--  -->
 
   <!-- Answer 4 -->
-  <!-- Integer condimentum ipsum id imperdiet finibus. Vivamus in placerat mi, at euismod dui. Aliquam
-  vitae neque eget nisl gravida pellentesque non ut velit.
+  <!-- 
 
   More Info
 
