--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </head>
 
 <body>
-  <div class="group/parent relative max-w-360 mx-auto min-h-screen min-w-93.75">
+  <div class="group/parent relative max-w-360 mx-auto min-h-screen min-w-93.75 overflow-hidden">
     <!-- Overlay -->
     <div id="overlay"
       class="absolute translate-x-full group-[.menu]/parent:translate-x-0 h-screen w-screen bg-blue-950/95 inset-0 -top-10 z-50 py-11 transition-transform duration-300 ease-in-out">
@@ -35,7 +35,7 @@
               </g>
             </g>
           </svg>
-          <button id="close-btn" class="cursor-pointer">
+          <button id="close-btn" aria-label="Close button" class="cursor-pointer">
             <img class="h-3.75 w-3.75" src="./images/icon-close.svg" alt="">
           </button>
         </div>
@@ -124,11 +124,11 @@
             </p>
             <div class="w-full flex gap-4 justify-center lg:justify-start">
               <button
-                class="cursor-pointer w-37.5 h-12 border border-transparent rounded-[5px] bg-blue-600 text-[15px] leading-[200%] font-medium text-white hover:bg-white hover:text-blue-600 hover:border-blue-600">
+                class="cursor-pointer w-37.5 h-12 border border-transparent rounded-[5px] bg-blue-600 text-[15px] leading-[200%] font-medium text-white hover:bg-white focus: right-0 focus-visible:bg-white hover:text-blue-600 focus: right-0 focus-visible:text-blue-600 hover:border-blue-600 focus: right-0 focus-visible:border-blue-600">
                 Get it on Chrome
               </button>
               <button
-                class="cursor-pointer w-37.5 h-12 border border-transparent rounded-[5px] bg-gray-50 text-[15px] leading-[200%] font-medium hover:bg-white hover:text-gray-600 hover:border-gray-600">
+                class="cursor-pointer w-37.5 h-12 border border-transparent rounded-[5px] bg-gray-50 text-[15px] leading-[200%] font-medium hover:bg-white focus: right-0 focus-visible:bg-white hover:text-gray-600 focus: right-0 focus-visible:text-gray-600 hover:border-gray-600 focus: right-0 focus-visible:border-gray-600">
                 Get it on Firefox
               </button>
             </div>
@@ -158,19 +158,19 @@
               <li
                 class="w-full text-center border border-l-0 border-r-0 border-t-[#495dcf]/20 border-b-[#495dcf]/20 md:border-t-0">
                 <button data-target="box1"
-                  class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400  border-t-0 border-r-0 border-l-0 border-b-red-400 transition">
+                  class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400 focus: right-0 focus-visible:text-red-400  border-t-0 border-r-0 border-l-0 border-b-red-400 transition">
                   Simple Bookmarking
                 </button>
               </li>
               <li class="w-full text-center border border-l-0 border-r-0 border-t-0 border-b-[#495dcf]/20">
                 <button data-target="box2"
-                  class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400 border-t-0 border-r-0 border-l-0 border-b-red-400 transition">
+                  class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400 focus: right-0 focus-visible:text-red-400 border-t-0 border-r-0 border-l-0 border-b-red-400 transition">
                   Speedy Searching
                 </button>
               </li>
               <li class="w-full text-center border border-l-0 border-r-0 border-t-0 border-b-[#495dcf]/20 ">
                 <button data-target="box3"
-                  class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400 border-t-0 border-r-0 border-l-0 border-b-red-400 transition">
+                  class="py-4 text-[15px] leading-[165%] text-blue-950 font-normal hover:text-red-400 focus: right-0 focus-visible:text-red-400 border-t-0 border-r-0 border-l-0 border-b-red-400 transition">
                   Easy Sharing
                 </button>
               </li>
@@ -315,7 +315,7 @@
             <!-- Button -->
             <div class="flex justify-center mt-6">
               <button
-                class="w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 hover:bg-white hover:border-blue-600 transition">
+                class="w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 focus: right-0 focus-visible:text-blue-600 hover:bg-white focus: right-0 focus-visible:bg-white hover:border-blue-600 focus: right-0 focus-visible:border-blue-600 transition">
                 Add & Install Extension
               </button>
             </div>
@@ -339,7 +339,7 @@
             <!-- Button -->
             <div class="flex justify-center mt-6">
               <button
-                class=" w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 hover:bg-white hover:border-blue-600 transition">
+                class="w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 focus: right-0 focus-visible:text-blue-600 hover:bg-white focus: right-0 focus-visible:bg-white hover:border-blue-600 focus: right-0 focus-visible:border-blue-600 transition">
                 Add & Install Extension
               </button>
             </div>
@@ -361,7 +361,7 @@
             <!-- Button -->
             <div class="flex justify-center mt-6">
               <button
-                class=" w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 hover:bg-white hover:border-blue-600 transition">
+                class="w-58 h-12 py-2 bg-blue-600 text-white text-[15px] leading-[200%] font-medium rounded-[5px] border border-transparent hover:text-blue-600 focus: right-0 focus-visible:text-blue-600 hover:bg-white focus: right-0 focus-visible:bg-white hover:border-blue-600 focus: right-0 focus-visible:border-blue-600 transition">
                 Add & Install Extension
               </button>
             </div>
@@ -386,7 +386,7 @@
           <!-- faq 1 -->
           <li class="group w-full border-b border-t border-t-[#495dcf]/20 border-b-[#495dcf]/20">
             <button data-accordion-header
-              class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400 transition">
+              class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400 focus: right-0 focus-visible:text-red-400 transition">
               <p>What is Bookmark?</p>
               <svg
                 class="w-5 h-3 group-[.open]:rotate-180 group-hover:text-blue-950 group-[.open]:text-red-400 scale-85 transition"
@@ -403,7 +403,7 @@
           <!-- faq 2 -->
           <li class="group w-full border-b border-b-[#495dcf]/20">
             <button data-accordion-header
-              class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400 transition">
+              class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400 focus: right-0 focus-visible:text-red-400 transition">
               <p>How can I request a new browser?</p>
               <svg
                 class="w-5 h-3 group-[.open]:rotate-180 group-hover:text-blue-950 group-[.open]:text-red-400 scale-85 transition"
@@ -421,7 +421,7 @@
           <!-- faq 3 -->
           <li class="group w-full border-b border-b-[#495dcf]/20">
             <button data-accordion-header
-              class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400 transition">
+              class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400 focus: right-0 focus-visible:text-red-400 transition">
               <p>Is there a mobile app?</p>
               <svg
                 class="w-5 h-3 group-[.open]:rotate-180 group-hover:text-blue-950 group-[.open]:text-red-400 scale-85 transition"
@@ -439,7 +439,7 @@
           <!-- faq 4 -->
           <li class="group w-full border-b border-b-[#495dcf]/20">
             <button data-accordion-header
-              class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400 transition">
+              class="w-full py-4 text-[15px] md:t-[18px] flex justify-between items-center text-blue-950 font-normal leading-[165%] md:leadding-[155%] hover:text-red-400 focus: right-0 focus-visible:text-red-400 transition">
               <p>What about other Chromium browsers?</p>
               <svg
                 class="w-5 h-3 group-[.open]:rotate-180 group-hover:text-blue-950 group-[.open]:text-red-400 scale-85 transition"
@@ -450,7 +450,8 @@
             <div
               class="hidden group-[.open]:block text-[15px] md:text-[16px] pb-4 text-blue-950 font-light leading-[200%] md:leading-[225%] transition">
               Other Chromium-based browsers like Microsoft Edge, Brave, Opera, and Vivaldi offer the same speed and
-              extension support as Chrome but with unique, privacy-focused, or highly customizable features. They are
+              extension support as Chrome but with unique, privacy focus: right-0-focused, or highly customizable
+              features. They are
               popular alternatives that often include built-in ad blockers, VPNs, or improved resource management.
             </div>
           </li>
@@ -489,7 +490,7 @@
                 alt="">
             </div>
             <button type="submit"
-              class="h-12 bg-red-400 rounded-[5px] text-[15px] text-white leading-[200%] font-medium shadow-[0_8px_8px_-4px] shadow-black/20 hover:text-red-400 hover:bg-white transition">
+              class="h-12 bg-red-400 rounded-[5px] text-[15px] text-white leading-[200%] font-medium shadow-[0_8px_8px_-4px] shadow-black/20 hover:text-red-400 focus: right-0 focus-visible:text-red-400  hover:bg-white focus: right-0 focus-visible:bg-white transition">
               Contact Us
             </button>
           </form>
@@ -505,22 +506,27 @@
         </a>
         <nav class="flex lg:mr-auto">
           <ul class="flex flex-col md:flex-row w-full gap-6  items-center justify-between">
-            <li><a class="text-[15px] leading-[165%] text-white hover:text-red-400 uppercase transition"
+            <li><a
+                class="text-[15px] leading-[165%] text-white hover:text-red-400 focus: right-0 focus-visible:text-red-400 uppercase transition"
                 href="#features">Features</a></li>
-            <li><a class="text-[15px] leading-[165%] text-white hover:text-red-400 uppercase transition"
+            <li><a
+                class="text-[15px] leading-[165%] text-white hover:text-red-400 focus: right-0 focus-visible:text-red-400 uppercase transition"
                 href="#">Pricing</a></li>
-            <li><a class="text-[15px] leading-[165%] text-white hover:text-red-400 uppercase transition"
+            <li><a
+                class="text-[15px] leading-[165%] text-white hover:text-red-400 focus: right-0 focus-visible:text-red-400 uppercase transition"
                 href="#cta">Contact</a>
             </li>
           </ul>
         </nav>
         <div class="flex justify-center items-center gap-10 w-22 h-6">
-          <svg class="fill-white hover:fill-red-400 stroke-white hover:stroke-red-400 transition"
+          <svg
+            class="fill-white hover:fill-red-400 focus: right-0 focus-visible:fill-red-400 stroke-white hover:stroke-red-400 focus: right-0 focus-visible:stroke-red-400 transition"
             xmlns="http://www.w3.org/2000/svg" width="24" height="24">
             <path fill-rule="evenodd"
               d="M22.675 0H1.325C.593 0 0 .593 0 1.325v21.351C0 23.407.593 24 1.325 24H12.82v-9.294H9.692v-3.622h3.128V8.413c0-3.1 1.893-4.788 4.659-4.788 1.325 0 2.463.099 2.795.143v3.24l-1.918.001c-1.504 0-1.795.715-1.795 1.763v2.313h3.587l-.467 3.622h-3.12V24h6.116c.73 0 1.323-.593 1.323-1.325V1.325C24 .593 23.407 0 22.675 0z" />
           </svg>
-          <svg class="fill-white hover:fill-red-400 stroke-white hover:stroke-red-400 transition"
+          <svg
+            class="fill-white hover:fill-red-400 focus: right-0 focus-visible:fill-red-400 stroke-white hover:stroke-red-400 focus: right-0 focus-visible:stroke-red-400 transition"
             xmlns="http://www.w3.org/2000/svg" width="24" height="20">
             <path fill-rule="evenodd"
               d="M24 2.557a9.83 9.83 0 0 1-2.828.775A4.932 4.932 0 0 0 23.337.608a9.864 9.864 0 0 1-3.127 1.195A4.916 4.916 0 0 0 16.616.248c-3.179 0-5.515 2.966-4.797 6.045A13.978 13.978 0 0 1 1.671 1.149a4.93 4.93 0 0 0 1.523 6.574 4.903 4.903 0 0 1-2.229-.616c-.054 2.281 1.581 4.415 3.949 4.89a4.935 4.935 0 0 1-2.224.084 4.928 4.928 0 0 0 4.6 3.419A9.9 9.9 0 0 1 0 17.54a13.94 13.94 0 0 0 7.548 2.212c9.142 0 14.307-7.721 13.995-14.646A10.025 10.025 0 0 0 24 2.557z" />
